fix(components): tableColumnProps headerAlign
fixed #58

--- a/packages/theme-chalk/src/mixins/mixins.scss
+++ b/packages/theme-chalk/src/mixins/mixins.scss
@@ -77,3 +77,11 @@
     }
   }
 }
+
+@mixin when($state) {
+  @at-root {
+    &.#{$plus-state-prefix + $state} {
+      @content;
+    }
+  }
+}
